fixed spacing on subheading

--- a/presentations/week3/style.css
+++ b/presentations/week3/style.css
@@ -58,7 +58,7 @@ blockquote{
 #byline{
   color: black;
   text-align: center;
-  padding-top: -500px;
+  padding-bottom: 60px;
   font-weight: bold;
 }
 
